# Cross-Platform-Remote-Administration-System

./: README.txt
Agent/: CMakeLists.txt  agent.manifest  agent.rc  server.cert  vcpkg.json
Agent/cmake/: linux.cmake  macos.cmake  windows.cmake
Agent/config/: Config.hpp  camera_config.txt
Agent/include/core/: Agent.hpp
Agent/include/handlers/: CommandDispatcher.hpp
Agent/include/modules/: AppControl_LINUX.h  AppControl_MAC.h  AppControl_WIN.h  CameraCapture.h  CameraRecorder.h  CaptureScreen.h  FileList.h  FileTransfer.h  KeyboardController.h  PlatformModules.h  ProcessControl_LINUX.h  ProcessControl_MAC.h  ProcessControl_WIN.h  ScreenRecorder.h  SystemInfoController.hpp
Agent/include/network/: WSConnection.hpp
Agent/include/utils/: Converter.h  FeatureLibrary.h  GatewayDiscovery.h  Message.hpp  PasswordDetector.h  PrivilegeEscalation.h  Protocol.hpp  base64.h
Agent/src/: main.cpp
Agent/src/core/: Agent.cpp
Agent/src/handlers/: CommandDispatcher.cpp
Agent/src/modules/: AppControl_LINUX.cpp  AppControl_MAC.cpp  AppControl_WIN.cpp  CameraCapture.cpp  CameraRecorder.cpp  CaptureScreen.cpp  FileList.cpp  FileTransfer.cpp  KeyboardController_LINUX.cpp  KeyboardController_MAC.cpp  KeyboardController_WIN.cpp  ProcessControl_LINUX.cpp  ProcessControl_MAC.cpp  ProcessControl_WIN.cpp  ScreenRecorder.cpp  SystemInfoController.cpp
Agent/src/network/: WSConnection.cpp
Agent/src/utils/: Converter.cpp  GatewayDiscovery.cpp  PasswordDetector.cpp  PrivilegeEscalation.cpp
Gateway/: .env  package-lock.json  package.json  server.key  tsconfig.json
(+54 files in other folders)
